# curl-Downloader

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AddItemDialog.cpp  AddItemDialog.h  AddItemDialog.ui  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  ConsoleOutputDialog.cpp  ConsoleOutputDialog.h  ConsoleOutputDialog.ui  CurlDownloader.ini  ItemWidget.cpp  ItemWidget.h  ItemWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Utils.cpp  Utils.h  curlErrors.h  main.cpp  main.rc.in  readme.md
installer/: script.iss.in
resources/: resources.qrc
